# hevy-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  api-docs.webloc  pyproject.toml  run_hevy_mcp.py
.github/workflows/: ci.yml  release-readiness.yml
docs/: project-notes.md
src/hevy_analytics/: bootstrap.py  cache.py  cli.py  client.py  config.py  errors.py  mcp_server.py  response.py  service.py  telemetry.py
src/hevy_analytics/tools/: __init__.py  accessories.py  fatigue.py  logging.py  progression.py  routines.py  search.py  top_exercises.py  volume.py  workouts.py
src/hevy_mcp/: analytics.py  client.py  config.py  errors.py  response.py  server.py  service.py  telemetry.py  tools.py  utils.py  validation.py
src/hevy_mcp/tools/: __init__.py  _shared.py  accessories.py  fatigue.py  logging.py  progression.py  routines.py  search.py  top_exercises.py  volume.py  workouts.py
tests/: test_analytics.py  test_cli.py  test_client.py  test_response.py  test_service_search.py  test_tools_full.py  test_tools_search_and_routines.py  test_tools_top_exercises.py  test_tools_volume.py
