[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hevy-mcp"
version = "1.0.0"
description = "Read-only MCP server for Hevy training analytics"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Kymylyy" },
]
keywords = ["mcp", "hevy", "fitness", "analytics", "training"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/Kymylyy/hevy-mcp"
Repository = "https://github.com/Kymylyy/hevy-mcp"
Issues = "https://github.com/Kymylyy/hevy-mcp/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.19.0",
  "pytest>=8.4.0",
  "ruff>=0.15.0",
  "twine>=6.1.0",
]

[project.scripts]
hevy-mcp = "hevy_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
